--- a/Desktop/Personal Projects/HW2/app/src/main/res/layout/activity_main.xml
+++ b/Desktop/Personal Projects/HW2/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,14 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="16dp"/>
 
+        <Button
+            android:id="@+id/btn_clear"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Clear"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="16dp"/>
+
         <!-- Sorted Output -->
         <TextView
             android:id="@+id/tv_sorted_output"
